--- a/confs/apache2/apache2.conf
+++ b/confs/apache2/apache2.conf
@@ -1,5 +1,5 @@
 ServerRoot "/etc/apache2"
-ServerName docker.eulonplay3dev.sm.sony.com
+ServerName myhost.com
 
 Mutex file:${APACHE_LOCK_DIR} default
 
